{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 39,
  "lineage": "066f66f7-5bba-2371-fb5b-60380d87733e",
  "resources": [
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:909799647907:security-group/sg-079f57ddc70f2440f",
            "description": "EKS worker nodes SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-079f57ddc70f2440f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "demo-eks-nodes-sg",
            "name_prefix": "",
            "owner_id": "909799647907",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "demo-eks-nodes-sg",
              "Project": "EKS-Cluster"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "demo-eks-nodes-sg",
              "Project": "EKS-Cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ed2e15060d2ef1e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "909799647907",
            "id": "sg-079f57ddc70f2440f",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:909799647907:internet-gateway/igw-0352db97342096db6",
            "id": "igw-0352db97342096db6",
            "owner_id": "909799647907",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "demo-eks-igw",
              "Project": "EKS-Cluster"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "demo-eks-igw",
              "Project": "EKS-Cluster"
            },
            "vpc_id": "vpc-03ed2e15060d2ef1e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0352db97342096db6",
            "id": "r-rtb-096ad3b64a7c61f291080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-096ad3b64a7c61f29",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "909799647907",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-096ad3b64a7c61f29"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:909799647907:route-table/rtb-0a4270a4b05e911d3",
            "id": "rtb-0a4270a4b05e911d3",
            "owner_id": "909799647907",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "demo-eks-private-rt",
              "Project": "EKS-Cluster"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "demo-eks-private-rt",
              "Project": "EKS-Cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ed2e15060d2ef1e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "909799647907",
            "id": "rtb-0a4270a4b05e911d3",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:909799647907:route-table/rtb-096ad3b64a7c61f29",
            "id": "rtb-096ad3b64a7c61f29",
            "owner_id": "909799647907",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0352db97342096db6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "demo-eks-public-rt",
              "Project": "EKS-Cluster"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "demo-eks-public-rt",
              "Project": "EKS-Cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ed2e15060d2ef1e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "909799647907",
            "id": "rtb-096ad3b64a7c61f29",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081d5d07f91e3e973",
            "region": "us-east-1",
            "route_table_id": "rtb-096ad3b64a7c61f29",
            "subnet_id": "subnet-020230744a5de4f84"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ccbc2af4ba64246",
            "region": "us-east-1",
            "route_table_id": "rtb-096ad3b64a7c61f29",
            "subnet_id": "subnet-0df5f55d6d4e8a49f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:909799647907:subnet/subnet-0bbbaea6aeb39976c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bbbaea6aeb39976c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "909799647907",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "demo-eks-private-a",
              "Project": "EKS-Cluster"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "demo-eks-private-a",
              "Project": "EKS-Cluster"
            },
            "vpc_id": "vpc-03ed2e15060d2ef1e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "909799647907",
            "id": "subnet-0bbbaea6aeb39976c",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:909799647907:subnet/subnet-0de21b43284ae871a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de21b43284ae871a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "909799647907",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "demo-eks-private-b",
              "Project": "EKS-Cluster"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "demo-eks-private-b",
              "Project": "EKS-Cluster"
            },
            "vpc_id": "vpc-03ed2e15060d2ef1e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "909799647907",
            "id": "subnet-0de21b43284ae871a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:909799647907:subnet/subnet-020230744a5de4f84",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020230744a5de4f84",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "909799647907",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "demo-eks-public-a",
              "Project": "EKS-Cluster"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "demo-eks-public-a",
              "Project": "EKS-Cluster"
            },
            "vpc_id": "vpc-03ed2e15060d2ef1e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "909799647907",
            "id": "subnet-020230744a5de4f84",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:909799647907:subnet/subnet-0df5f55d6d4e8a49f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df5f55d6d4e8a49f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "909799647907",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "demo-eks-public-b",
              "Project": "EKS-Cluster"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "demo-eks-public-b",
              "Project": "EKS-Cluster"
            },
            "vpc_id": "vpc-03ed2e15060d2ef1e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "909799647907",
            "id": "subnet-0df5f55d6d4e8a49f",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:909799647907:vpc/vpc-03ed2e15060d2ef1e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cef3bb35cde9aa6f",
            "default_route_table_id": "rtb-08a14844f7844abf8",
            "default_security_group_id": "sg-0a72d9524b901a160",
            "dhcp_options_id": "dopt-0f71617c283273043",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03ed2e15060d2ef1e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08a14844f7844abf8",
            "owner_id": "909799647907",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "demo-eks-vpc",
              "Project": "EKS-Cluster"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "demo-eks-vpc",
              "Project": "EKS-Cluster"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "interface_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ec2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:909799647907:vpc-endpoint/vpce-0e40a02c4f4ae9516",
            "dns_entry": [
              {
                "dns_name": "vpce-0e40a02c4f4ae9516-wab8win8.ec2.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0e40a02c4f4ae9516-wab8win8-us-east-1b.ec2.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0e40a02c4f4ae9516-wab8win8-us-east-1a.ec2.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ec2.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z07960441RHOBDT38WD16"
              },
              {
                "dns_name": "ec2.us-east-1.api.aws",
                "hosted_zone_id": "Z06262112KOXLYS03LUC6"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0e40a02c4f4ae9516",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0eafe3112f796f18f",
              "eni-0ec9b5d900e762000"
            ],
            "owner_id": "909799647907",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-079f57ddc70f2440f"
            ],
            "service_name": "com.amazonaws.us-east-1.ec2",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.101.107",
                "subnet_id": "subnet-0bbbaea6aeb39976c"
              },
              {
                "ipv4": "10.0.102.121",
                "subnet_id": "subnet-0de21b43284ae871a"
              }
            ],
            "subnet_ids": [
              "subnet-0bbbaea6aeb39976c",
              "subnet-0de21b43284ae871a"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "demo-eks-ec2-endpoint",
              "Project": "EKS-Cluster"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "demo-eks-ec2-endpoint",
              "Project": "EKS-Cluster"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-03ed2e15060d2ef1e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.eks_nodes",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ecr.api",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:909799647907:vpc-endpoint/vpce-06b445c22bd2b4c2a",
            "dns_entry": [
              {
                "dns_name": "vpce-06b445c22bd2b4c2a-psjt8i25.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-06b445c22bd2b4c2a-psjt8i25-us-east-1a.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-06b445c22bd2b4c2a-psjt8i25-us-east-1b.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "api.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0193725BS5D0R9JYIS1"
              },
              {
                "dns_name": "ecr.us-east-1.api.aws",
                "hosted_zone_id": "Z062540539XZEOYS6K8ZF"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-06b445c22bd2b4c2a",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-07d01d3705c31dee0",
              "eni-0da44a7298a9368e8"
            ],
            "owner_id": "909799647907",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-079f57ddc70f2440f"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.api",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.101.80",
                "subnet_id": "subnet-0bbbaea6aeb39976c"
              },
              {
                "ipv4": "10.0.102.148",
                "subnet_id": "subnet-0de21b43284ae871a"
              }
            ],
            "subnet_ids": [
              "subnet-0bbbaea6aeb39976c",
              "subnet-0de21b43284ae871a"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "demo-eks-ecr.api-endpoint",
              "Project": "EKS-Cluster"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "demo-eks-ecr.api-endpoint",
              "Project": "EKS-Cluster"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-03ed2e15060d2ef1e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.eks_nodes",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "ecr.dkr",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:909799647907:vpc-endpoint/vpce-06e9bd434b15f1591",
            "dns_entry": [
              {
                "dns_name": "vpce-06e9bd434b15f1591-xw1tafbr.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-06e9bd434b15f1591-xw1tafbr-us-east-1b.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-06e9bd434b15f1591-xw1tafbr-us-east-1a.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z018344434BGUW9UH11VY"
              },
              {
                "dns_name": "*.dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z018344434BGUW9UH11VY"
              },
              {
                "dns_name": "dkr-ecr.us-east-1.on.aws",
                "hosted_zone_id": "Z0193366CK0MNAHZQFSP"
              },
              {
                "dns_name": "*.dkr-ecr.us-east-1.on.aws",
                "hosted_zone_id": "Z0193366CK0MNAHZQFSP"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-06e9bd434b15f1591",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-08f5da6bb623c6411",
              "eni-0cc22f78f92d9d958"
            ],
            "owner_id": "909799647907",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-079f57ddc70f2440f"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.dkr",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.101.149",
                "subnet_id": "subnet-0bbbaea6aeb39976c"
              },
              {
                "ipv4": "10.0.102.9",
                "subnet_id": "subnet-0de21b43284ae871a"
              }
            ],
            "subnet_ids": [
              "subnet-0bbbaea6aeb39976c",
              "subnet-0de21b43284ae871a"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "demo-eks-ecr.dkr-endpoint",
              "Project": "EKS-Cluster"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "demo-eks-ecr.dkr-endpoint",
              "Project": "EKS-Cluster"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-03ed2e15060d2ef1e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.eks_nodes",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "logs",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:909799647907:vpc-endpoint/vpce-0d1b8eb1edca31b16",
            "dns_entry": [
              {
                "dns_name": "vpce-0d1b8eb1edca31b16-4gsn04b7.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0d1b8eb1edca31b16-4gsn04b7-us-east-1b.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0d1b8eb1edca31b16-4gsn04b7-us-east-1a.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z06258942MHGI87U211RV"
              },
              {
                "dns_name": "streaming-logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z06258972P7TBRMIN5YIC"
              },
              {
                "dns_name": "streaming-logs.us-east-1.api.aws",
                "hosted_zone_id": "Z0196076WJIMX14N22JW"
              },
              {
                "dns_name": "logs.us-east-1.api.aws",
                "hosted_zone_id": "Z019518433HTI1134WE4L"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0d1b8eb1edca31b16",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-023d0eebdfc987f6f",
              "eni-0d877b51bf5a17941"
            ],
            "owner_id": "909799647907",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-079f57ddc70f2440f"
            ],
            "service_name": "com.amazonaws.us-east-1.logs",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.101.102",
                "subnet_id": "subnet-0bbbaea6aeb39976c"
              },
              {
                "ipv4": "10.0.102.71",
                "subnet_id": "subnet-0de21b43284ae871a"
              }
            ],
            "subnet_ids": [
              "subnet-0bbbaea6aeb39976c",
              "subnet-0de21b43284ae871a"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "demo-eks-logs-endpoint",
              "Project": "EKS-Cluster"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "demo-eks-logs-endpoint",
              "Project": "EKS-Cluster"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-03ed2e15060d2ef1e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.eks_nodes",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": "sts",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:909799647907:vpc-endpoint/vpce-0ebbe4bc2aa9b6fe5",
            "dns_entry": [
              {
                "dns_name": "vpce-0ebbe4bc2aa9b6fe5-gqdvddrb.sts.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0ebbe4bc2aa9b6fe5-gqdvddrb-us-east-1a.sts.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0ebbe4bc2aa9b6fe5-gqdvddrb-us-east-1b.sts.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "sts.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0194974ADRTB2Z0J702"
              },
              {
                "dns_name": "sts.us-east-1.api.aws",
                "hosted_zone_id": "Z01812333QZFOJ4W3DN4L"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0ebbe4bc2aa9b6fe5",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-071e1c05528692993",
              "eni-08841e3b6fe891035"
            ],
            "owner_id": "909799647907",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-079f57ddc70f2440f"
            ],
            "service_name": "com.amazonaws.us-east-1.sts",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.101.192",
                "subnet_id": "subnet-0bbbaea6aeb39976c"
              },
              {
                "ipv4": "10.0.102.220",
                "subnet_id": "subnet-0de21b43284ae871a"
              }
            ],
            "subnet_ids": [
              "subnet-0bbbaea6aeb39976c",
              "subnet-0de21b43284ae871a"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "demo-eks-sts-endpoint",
              "Project": "EKS-Cluster"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "demo-eks-sts-endpoint",
              "Project": "EKS-Cluster"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-03ed2e15060d2ef1e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.aws_security_group.eks_nodes",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:909799647907:vpc-endpoint/vpce-0bb5d422f1db1004c",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "id": "vpce-0bb5d422f1db1004c",
            "owner_id": "909799647907",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "region": "us-east-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-096ad3b64a7c61f29",
              "rtb-0a4270a4b05e911d3"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Environment": "dev",
              "Name": "demo-eks-s3-endpoint",
              "Project": "EKS-Cluster"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "demo-eks-s3-endpoint",
              "Project": "EKS-Cluster"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-03ed2e15060d2ef1e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    }
  ]
}